--- a/package.json
+++ b/package.json
@@ -43,14 +43,14 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
-    "date-fns": "4.1.0",
+    "date-fns": "^3.0.0",
     "embla-carousel-react": "8.5.1",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
     "next": "^14.2.24",
     "next-themes": "latest",
     "react": "^18",
-    "react-day-picker": "8.10.1",
+    "react-day-picker": "^9.5.1",
     "react-dom": "^18",
     "react-hook-form": "latest",
     "react-resizable-panels": "^2.1.7",
@@ -67,6 +67,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "postcss": "^8",
+    "supabase": "^2.12.1",
     "tailwindcss": "^3.4.17",
     "typescript": "^5"
   }
